# convolution_example

./: CMakeLists.txt  README.md  readme.txt
data/: lena.raw
headers/: GaussianFilterConvolution.hxx  Image2D.hxx  ImageBase.hxx  ImageConvolutionFilter.hxx  ImageFilterBase.hxx  constants.h
src/: CMakeLists.txt  GaussianFilterConvolution.cxx  Image2D.cxx  ImageBase.cxx  ImageConvolutionFilter.cxx  main.cxx
